--- a/views/aboutsite.ejs
+++ b/views/aboutsite.ejs
@@ -1,12 +1,56 @@
 <% include ./partials/header.ejs %>
 <% include ./partials/siteHead.ejs %>
-
-<% include ./partials/colheader.ejs %>
-<p> This is about me </p>
-<% include ./partials/colfooter.ejs %>
+<link rel="stylesheet" href="/stylesheets/aboutsite.css">
 
 <script>
     document.getElementById("aboutSite").style.color = "black";
 </script>
+
+<% include ./partials/colheader.ejs %>
+<div class="section">
+    <p>Noninertial frame, by definition, is <i>a frame of reference that moves with the object, 
+    so that the moving object appears to violate Newton's laws of motion since it accelerates 
+    despite having no horizontal forces on it (Dictionary.com). </i> It is a frame whose velocity 
+    is continuously changing and in which classical laws of mechanics do not work. It is also 
+    the real frame we live or should live in because our world moves every moment.</p>
+    <p><strong>Noninertial Frame</strong> is to keep ourselves staying in a frame 
+    that accelerates every moment. Acceleration does not necessarily refer to increase of speed; 
+    it could be change of direction or even decrease of speed. The important point 
+    is that every moment we move to a different point, eventually towards the dream each one of us has. 
+    The posts in this blog will mainly deal with my projects and display the 
+    trace of the professional side of my life.</p>
+    <p>If anyone has any ideas, quesitons, or thoughts, please feel free to contact me 
+    or leave a comment on any of the posts!</p>
+</div>
+<div class="section">
+    <div class="sectionTitle">Site Info</div>
+    <table>
+        <tr>
+            <td>Stack</td>
+            <td>MongoDB, Node.js, Express.js</td>
+        </tr>
+        <tr>
+            <td>DevOps</td>
+            <td>Cloud9 IDE</td>
+        </tr>
+        <tr>
+            <td>Platform</td>
+            <td>Heroku</td>
+        </tr>
+        <tr>
+            <td>Database Service</td>
+            <td>MLab</td>
+        </tr>
+        <tr>
+            <td>Launch Date</td>
+            <td>2017.02.25</td>
+        </tr>
+        <tr>
+            <td>Github Repository</td>
+            <td><a href=https://github.com/noninertialframe/noninertialframe.github.io>Link</a></td>
+        </tr>
+    </table>
+</div>
+<% include ./partials/colfooter.ejs %>
 
 <% include ./partials/footer.ejs %>
