changed og property

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
         <meta charset = "UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta property="og:title" content="noninertialframe.com" />
-        <meta property="og:url" content="https://www.noninertialframe.com/" />
+        <meta property="og:url" content="http://www.noninertialframe.com/" />
         <meta property="og:description" content="Yongkyun's personal project blog" />
         <title>Noninertial Frame</title>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,800|Roboto:400,900" rel="stylesheet">
