Added more info for Arduino Project
Add media link for the The award winning Self-stabilizing Conveyor System

--- a/views/aboutme.ejs
+++ b/views/aboutme.ejs
@@ -70,6 +70,7 @@
             <p>Built self-stabilizing conveyor system using Arduino in a 5 member team. 
             Co-worked on programming the source code with one other student.</p>
             <p>The first US team to win in competition history.</p>
+            <p>You can find the whole story <a href:"https://www.thalesgroup.com/en/united-states/news/thalesarduino-and-winner">here</a>.</p>
             <p><a href="https://github.com/noninertialframe/Self-stabilizing-conveyor-system-Arduino-sourcecode">Github repository</a> 
             of the source code (details explained in description and code)</p>
         </div>
