added google analytics

--- a/views/aboutsite.ejs
+++ b/views/aboutsite.ejs
@@ -42,6 +42,10 @@
             <td>MLab</td>
         </tr>
         <tr>
+            <td>Domain Registration</td>
+            <td>Namecheap</td>
+        </tr>
+        <tr>
             <td>Launch Date</td>
             <td>2017.02.25</td>
         </tr>
