--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,5 +13,14 @@
         <link rel="stylesheet" href="/stylesheets/general.css">
         <script src="https://use.fontawesome.com/6987730bbf.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114127976-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+        
+            gtag('config', 'UA-114127976-1');
+        </script>
     </head>
     <body>
